# Coding-Agent-Loop

./: .gitignore  README.md  TodoWrite.md  bub_build_architecture_analysis.md  simplebank
agent-coding-loop/: .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  roadmap_quality_assessment.md
agent-coding-loop/cmd/agent-loop/: main.go  progress.go  progress_test.go
agent-coding-loop/docs/: benchmark-residue-cleanup.md  eino-agent-loop.md  engineering-resilience.md  project-status-and-architecture-2026-03-20.md  rag-kb-lancedb.md
agent-coding-loop/docs/plans/: 2026-03-14-resume-crash-recovery-and-structured-output.md  2026-03-15-progress-visibility-and-streaming-design.md  2026-03-20-plan-mode-minimal-implementation.md  2026-03-20-repair-phase-implementation.md  2026-03-21-targeted-repair-eval-implementation.md
agent-coding-loop/eval/: README.md  __init__.py  batch_retrieval.py  evaluate.py  validate_eval_inputs.py
agent-coding-loop/eval/ab/: README.md  __init__.py  benchmark_tasks.jsonl  hunk_fix_tasks.jsonl  minimal_tasks.jsonl  repair_targeted_tasks.jsonl  run_ab.py  step3-prep-checklist.md  test_run_ab_strict.py
agent-coding-loop/eval/data/: qa_gold.jsonl  qa_predictions.jsonl  qrels.jsonl  retrieval_predictions.jsonl
agent-coding-loop/eval/k8s/: README.md  __init__.py  collect_results.py  example_result.jsonl  job.yaml.tmpl  pvc.yaml  summarize.py  test_collect_results.py  test_contracts.py  test_summarize.py
agent-coding-loop/eval/tests/: test_batch_retrieval.py  test_benchmark_tasks.py  test_evaluate.py  test_kb_server.py  test_run_ab.py  test_run_one_integration.py  test_summarize.py  test_validate_eval_inputs.py
agent-coding-loop/internal/agent/: agent_test.go  client.go  client_eino.go  client_eino_test.go  coder.go  coder_eino.go  coder_patch_test.go  options.go  prompt_recorder.go  responses_transport.go  responses_transport_test.go  reviewer.go  reviewer_eino.go
agent-coding-loop/internal/config/: config.go  config_test.go
agent-coding-loop/internal/git/: git.go  (+2 more)
agent-coding-loop/kb/: requirements-local-embedding.txt  requirements.txt  server.py
agent-coding-loop/migrations/: 001_init.sql
agent-coding-loop/prompts/: coder.tmpl  reviewer.tmpl
agent-coding-loop/skills/: code-review.md
coding-agent/: .gitignore  AGENTS.md  CLAUDE-CODE-TUI-ARCHITECTURE.md  Dockerfile  KIMI-TUI-ARCHITECTURE.md  OPENCODE-TUI-ARCHITECTURE.md  README.md  pyproject.toml  test_mcp.py  test_real_task_file_patch.md
coding-agent/.sisyphus/: boulder.json
coding-agent/benchmarks/: test_parallel_perf.py
coding-agent/docs/: AGENTKIT-ARCHITECTURE-zh.md  AGENTKIT-ARCHITECTURE.md  CODING-AGENT-ARCHITECTURE-zh.md  CODING-AGENT-ARCHITECTURE.md  PYTHON-AGENT-TUI-RESEARCH.md  TUI-IMPLEMENTATION-CHECKLIST.md  fix_cache_and_exception.md  optimization_plan.md  pg-phase2-multi-instance-checklist.md  stacked-pr-worktree-cleanup-sop.md  task_1_1_api_retry_spec.md  task_1_2_token_fallback_spec.md  task_1_3_connection_pool_spec.md  task_2_1_kb_progress_spec.md  task_2_2_lazy_import_spec.md  task_2_3_tool_timing_spec.md  task_2_4_error_handling_spec.md  task_3_1_token_cache_spec.md  task_3_2_metrics_spec.md  task_3_3_context_summary_implementation.md  task_3_3_context_summary_spec.md
coding-agent/postmortem/: README.md  index.yaml  taxonomy.yaml
coding-agent/skills/: code-review.md
coding-agent/subagent_demo/: README.md  RESULT_SUMMARY.md  agent1_stats.md  agent2_numbers.md  agent3_patterns.md
coding-agent/tests/: test_e2e_p1.py  test_kb.py  test_session.py  test_skills.py
(+994 files in other folders)
